--- a/index.html
+++ b/index.html
@@ -3,137 +3,148 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gardio-style Chat with Markdown</title>
+<title>ACCA Chat Agent</title>
+
+<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+<!-- Markdown parser -->
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+<!-- KaTeX for LaTeX rendering -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body);"></script>
+
 <style>
-  body {
-    font-family: 'Inter', sans-serif;
-    background: #f9f9f9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
+body {
+  font-family: 'Inter', sans-serif;
+  background: #f0f2f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
 
-  .chat-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    max-height: 600px;
-    border-radius: 16px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    background: #fff;
-    overflow: hidden;
-  }
+.chat-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 600px;      /* increased width */
+  max-height: 800px; /* increased height */
+  border-radius: 16px;
+  box-shadow: 0 6px 25px rgba(0,0,0,0.12);
+  background: #fff;
+  overflow: hidden;
+}
 
-  .chat-container {
-    flex: 1;
-    padding: 16px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
+.chat-container {
+  flex: 1;
+  padding: 20px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
 
-  .message {
-    max-width: 80%;
-    padding: 10px 14px;
-    border-radius: 12px;
-    word-wrap: break-word;
-    animation: fadeIn 0.2s ease;
-    font-size: 14px;
-  }
+.message {
+  max-width: 80%;
+  padding: 12px 16px;
+  border-radius: 14px;
+  word-wrap: break-word;
+  animation: fadeIn 0.2s ease;
+  font-size: 15px; /* slightly larger text */
+}
 
-  .user {
-    background-color: #007bff;
-    color: #fff;
-    align-self: flex-end;
-    border-bottom-right-radius: 2px;
-  }
+.user {
+  background-color: #007bff;
+  color: #fff;
+  align-self: flex-end;
+  border-bottom-right-radius: 2px;
+}
 
-  .bot {
-    background-color: #e5e5ea;
-    color: #000;
-    align-self: flex-start;
-    border-bottom-left-radius: 2px;
-    white-space: pre-wrap;
-  }
+.bot {
+  background-color: #e5e5ea;
+  color: #000;
+  align-self: flex-start;
+  border-bottom-left-radius: 2px;
+  white-space: pre-wrap;
+}
 
-  .bot code {
-    background: #f4f4f4;
-    padding: 2px 6px;
-    border-radius: 4px;
-    font-family: monospace;
-    font-size: 13px;
-  }
+.bot code {
+  background: #f4f4f4;
+  padding: 3px 6px;
+  border-radius: 4px;
+  font-family: monospace;
+  font-size: 14px;
+}
 
-  .bot pre {
-    background: #f4f4f4;
-    padding: 8px;
-    border-radius: 8px;
-    overflow-x: auto;
-  }
+.bot pre {
+  background: #f4f4f4;
+  padding: 10px;
+  border-radius: 8px;
+  overflow-x: auto;
+}
 
-  .bot a {
-    color: #007bff;
-    text-decoration: none;
-  }
+.bot a {
+  color: #007bff;
+  text-decoration: none;
+}
 
-  .bot a:hover {
-    text-decoration: underline;
-  }
+.bot a:hover {
+  text-decoration: underline;
+}
 
-  .chat-input {
-    display: flex;
-    padding: 10px;
-    border-top: 1px solid #eee;
-    background: #fff;
-  }
+.chat-input {
+  display: flex;
+  padding: 12px;
+  border-top: 1px solid #eee;
+  background: #fff;
+}
 
-  #user-input {
-    flex: 1;
-    padding: 10px;
-    border-radius: 12px;
-    border: 1px solid #ccc;
-    outline: none;
-    font-size: 14px;
-  }
+#user-input {
+  flex: 1;
+  padding: 12px;
+  border-radius: 14px;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 15px;
+}
 
-  #send-btn {
-    padding: 10px 16px;
-    margin-left: 8px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    font-weight: 500;
-  }
+#send-btn {
+  padding: 12px 18px;
+  margin-left: 10px;
+  background: #007bff;
+  color: white;
+  border: none;
+  border-radius: 14px;
+  cursor: pointer;
+  font-weight: 500;
+}
 
-  @keyframes fadeIn {
-    from {opacity: 0; transform: translateY(5px);}
-    to {opacity:1; transform: translateY(0);}
-  }
+@keyframes fadeIn {
+  from {opacity: 0; transform: translateY(5px);}
+  to {opacity:1; transform: translateY(0);}
+}
 
-  .typing {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin: 0 2px;
-    background: #888;
-    border-radius: 50%;
-    animation: blink 1.4s infinite both;
-  }
+.typing {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin: 0 2px;
+  background: #888;
+  border-radius: 50%;
+  animation: blink 1.4s infinite both;
+}
 
-  .typing span:nth-child(2) { animation-delay: 0.2s; }
-  .typing span:nth-child(3) { animation-delay: 0.4s; }
+.typing span:nth-child(2) { animation-delay: 0.2s; }
+.typing span:nth-child(3) { animation-delay: 0.4s; }
 
-  @keyframes blink {
-    0%, 80%, 100% { opacity: 0; }
-    40% { opacity: 1; }
-  }
+@keyframes blink {
+  0%, 80%, 100% { opacity: 0; }
+  40% { opacity: 1; }
+}
 </style>
 </head>
 <body>
@@ -151,6 +162,9 @@ const chatContainer = document.getElementById('chat-container');
 const userInput = document.getElementById('user-input');
 const sendBtn = document.getElementById('send-btn');
 
+// Your n8n webhook URL
+const WEBHOOK_URL = 'https://aneniex.app.n8n.cloud/webhook-test/e3bd9993-dc48-445f-a65f-d7f5a270621b';
+
 sendBtn.addEventListener('click', sendMessage);
 userInput.addEventListener('keypress', function(e) {
   if(e.key === 'Enter') sendMessage();
@@ -166,7 +180,7 @@ async function sendMessage() {
   const typingBubble = appendMessage('', 'bot', true);
 
   try {
-    const response = await fetch('YOUR_N8N_WEBHOOK_URL', {
+    const response = await fetch(WEBHOOK_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ question: message })
@@ -198,9 +212,20 @@ function appendMessage(text, type, typing=false) {
 function appendMessageMarkdown(mdText, type) {
   const msgDiv = document.createElement('div');
   msgDiv.classList.add('message', type);
+  // Parse Markdown
   msgDiv.innerHTML = marked.parse(mdText);
   chatContainer.appendChild(msgDiv);
   chatContainer.scrollTop = chatContainer.scrollHeight;
+
+  // Render LaTeX
+  renderMathInElement(msgDiv, {
+    delimiters: [
+      {left: "$$", right: "$$", display: true},
+      {left: "\\[", right: "\\]", display: true},
+      {left: "$", right: "$", display: false},
+      {left: "\\(", right: "\\)", display: false}
+    ]
+  });
 }
 </script>
 
