🔧 Fix API issues and add debug functionality
- Fix API URL to use correct webhook-test endpoint
- Improve error handling for non-JSON responses
- Add comprehensive API testing and debugging tools
- Add debug button for development/testing
- Better error messages for different failure types
- Handle HTML responses gracefully
- Add API connection testing functionality

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <button id="shareBtn" class="btn btn-outline-secondary btn-sm" title="Share conversation">
             <i class="bi bi-share"></i>
           </button>
+          <button id="debugBtn" class="btn btn-outline-warning btn-sm" title="Debug API" style="display: none;">
+            <i class="bi bi-bug"></i>
+          </button>
           <button id="newChatBtn" class="btn btn-outline-secondary btn-sm" title="New chat">
             <i class="bi bi-plus-circle"></i>
           </button>
