feat(canned): add ~100 small-talk/abusive keyword replies with dictionary and pre-send check; include in build and SW cache

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   <script src="assets/js/api.js"></script>
   <script src="assets/js/ui.js"></script>
   <script src="assets/js/messages.js"></script>
+  <script src="assets/js/canned.js"></script>
   <script src="assets/js/chat.js"></script>
   <script src="assets/js/search.js"></script>
   <script src="assets/js/pinned.js"></script>
